# proof-of-burn-cardano

./: .gitignore  README.md  cabal.project  cabal.project.freeze  docker-compose.yml  hie.yaml  proof-of-burn.cabal  stack.yaml  start-testnet-chainindex.sh  start-testnet-node.sh  start-testnet-pab.sh  start-testnet-wallet.sh  tx_article.md
app/plutus-burner/: Main.hs
app/plutus-burner-pab/: Main.hs
app/plutus-fake-address/: Main.hs
docker/cardano-cli/: Dockerfile  wallet.sh
docs/: burn.md  burn.sh  cardano-testing.bib  cardano-testing.md  cardano-testing.sh
scripts/: cardano-cli.sh  functions.sh  wallet.sh
src/: Contracts.hs  ProofOfBurn.hs
test/: Main.hs  PropTests.hs  UnitTests.hs
testnet/: chain-index-config.json  pab-config.yml
