Cabal-Version:      2.4
Name:               proof-of-burn
Version:            0.1.0.0
Author:              Michał J. Gajda
Maintainer:          mjgajda@migamake.com
Build-Type:          Simple
Copyright:           © 2021 Iagon

common common-extensions
  default-extensions:
    DataKinds
    -- NoImplicitPrelude
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies
    TypeOperators

library
  hs-source-dirs:      src
  exposed-modules:     ProofOfBurn
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , containers
                     , cardano-api
                     , cardano-prelude
                     , lens
                     , playground-common
                     , plutus-core
                     , plutus-contract
                     , plutus-chain-index
                     , plutus-ledger
                     , plutus-tx-plugin
                     , plutus-tx
                     , serialise
                     , text
                     , plutus-ledger-api
                     , mono-traversable
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable plutus-burner
  main-is:              app/plutus-burner/Main.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  build-depends:        cardano-api
                      , cmdargs
                      , base ^>=4.14.1.0
                      , aeson
                      , aeson-pretty
                      , bytestring
                      , cardano-binary
                      , cardano-crypto-class
                      , cardano-ledger-alonzo
                      , cardano-ledger-core
                      , cardano-ledger-shelley
                      , plutus-ledger
                      , plutus-ledger-api
                      , proof-of-burn
                      , text
                      , unix

test-suite plutus-burner-tests
  import: common-extensions
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules: UnitTests
               , PropTests
  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , QuickCheck
                     , aeson
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx
                     , proof-of-burn
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
                     , freer-simple
                     -- , extensible-effects
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
